kubernetes-manifests/Nexus/nexus.deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nexus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - image: sonatype/nexus3
        imagePullPolicy: Always
        name: nexus
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
          - mountPath: /nexus-data
            name: nexus-data-volume
      securityContext:
        runAsUser: 200
        runAsGroup: 200
      volumes:
        - name: nexus-data-volume
          persistentVolumeClaim:
            claimName: nexus-pvc-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: docker 
  selector:
    app: nexus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dockerhub.thalamus.am
    - nexus.thalamus.am
    secretName: nexus-tls
  rules:
  - host: nexus.thalamus.am
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 80
  - host: dockerhub.thalamus.am
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 5000
